Shame on me... I don't remember what is it

--- a/MrJiboAssistant/app/views/showSuggestion.scala.html
+++ b/MrJiboAssistant/app/views/showSuggestion.scala.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 <h1>Suggestion</h1>
+<div id="info"></div>
 <div id="products" data-ws-url="@routes.ProductController.suggestionWs.webSocketURL(request)">
     here are listed the products.
 </div>
